# IndiaMediaLens-Server

./: .gitignore  README.md  current.py  gpu_nlp.py  historical.py  nlp.py  process.py  pyproject.toml  server.py  visualization.py
data/current/: nivaduck_with_display_names.json
data/historical/: elections_annotated.csv
