[project]
name = "viewfinder-server"
version = "0.1.1"
description = "Backend for ViewFinder (IndiaMediaLens 2.0)"
readme = "README.md"

requires-python = "==3.10.*"
dependencies = [
    "asyncio>=4.0.0",
    "datetime>=6.0",
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "newspaper3k>=0.2.8",
    "newssentiment>=1.2.28",
    "nicegui>=3.12.1",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pydantic>=2.13.4",
    "scikit-learn>=1.7.2",
    "selenium>=4.44.0",
    "serpapi>=1.0.2",
    "spacy>=3.8.14",
    "thefuzz>=0.22.1",
    "typing>=3.10.0.0",
]
