[project]
name = "viewfinder-server"
version = "0.1.1"
description = "Backend for ViewFinder (IndiaMediaLens 2.0)"
readme = "README.md"

requires-python = "==3.10.*"
dependencies = [
    "asyncio>=4.0.0",
    "datetime>=6.0",
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "modal>=1.4.3",
    "newspaper3k>=0.2.8",
    "nicegui>=3.12.1",
    "numpy>=1.26.4",
    "pandas>=2.3.3",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "scikit-learn>=1.7.2",
    "selenium>=4.44.0",
    "sentencepiece>=0.2.1",
    "serpapi>=1.0.2",
    "typing>=3.10.0.0",
]
