[project]
name = "viewfinder-server"
version = "0.1.1"
description = "Backend for ViewFinder (IndiaMediaLens 2.0)"
readme = "README.md"

requires-python = "==3.10.*"
dependencies = [
    "asyncio>=4.0.0",
    "datetime>=6.0",
    "dotenv>=0.9.9",
    "en-core-web-trf",
    "en-core-web-sm",
    "fastapi>=0.136.3",
    "newspaper3k>=0.2.8",
    "newssentiment>=1.2.28",
    "nicegui>=3.12.1",
    "numpy<2",
    "pandas>=2.3.3",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "scikit-learn>=1.7.2",
    "selenium>=4.44.0",
    "sentencepiece>=0.2.1",
    "serpapi>=1.0.2",
    "spacy>=3.8.14",
    "thefuzz>=0.22.1",
    "typing>=3.10.0.0",
]

[tool.uv.sources]
en-core-web-trf = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.8.0/en_core_web_trf-3.8.0-py3-none-any.whl" }
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }